--- a/.github/workflows/push_container_image.yml
+++ b/.github/workflows/push_container_image.yml
@@ -1,36 +1,36 @@
-name: Publish image
+name: "Publish image"
 on:
   release:
     types: [published]
 
 jobs:
   push_to_registries:
-    name: Push image to multiple registries
+    name: "Push image to multiple registries"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: "Checkout code"
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Force fetch annotated tags (workaround)
+      - name: "Force fetch annotated tags (workaround)"
         # Workaround for https://github.com/actions/checkout/issues/290
         run: |
             git fetch --force --tags
 
-      - name: Set up Docker Buildx
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v2
         with:
           buildkitd-flags: --debug
 
-      - name: Login to ghcr.io
+      - name: "Login to ghcr.io"
         uses: docker/login-action@v2
         with:
             registry: ghcr.io
             username: ${{ github.repository_owner }}
             password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: "Build and push Docker images"
         run: |
             cd docker
             make GITHUB_ACTIONS=${GITHUB_ACTIONS} GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}
