--- a/docker/Makefile
+++ b/docker/Makefile
@@ -189,7 +189,7 @@ ub-18.04-irods-clients-4.2.11.$(TAG): irods_clients/ubuntu/Dockerfile ub-18.04-b
 	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.11 \
-	--build-arg BATON_VERSION=4.0.1 \
+	--build-arg BATON_VERSION=4.1.0 \
 	--build-arg HTSLIB_VERSION=1.17 \
 	--build-arg SAMTOOLS_VERSION=1.17 \
 	--label org.opencontainers.image.title="iRODS 4.2.11 clients, Ubuntu 18.04" \
@@ -209,6 +209,9 @@ ub-18.04-irods-clients-dev-4.2.11.$(TAG): irods_clients_dev/ubuntu/Dockerfile
 	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.11 \
+	--build-arg BATON_VERSION=4.1.0 \
+	--build-arg HTSLIB_VERSION=1.17 \
+	--build-arg SAMTOOLS_VERSION=1.17 \
 	--label org.opencontainers.image.title="iRODS 4.2.11 client development, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -227,7 +230,7 @@ ub-18.04-irods-clients-4.2.12.$(TAG): irods_clients/ubuntu/Dockerfile ub-18.04-b
 	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
 	--build-arg DOCKER_TAG=$(TAG) \
 	--build-arg IRODS_VERSION=4.2.12 \
-	--build-arg BATON_VERSION=4.0.1 \
+	--build-arg BATON_VERSION=4.1.0 \
 	--build-arg HTSLIB_VERSION=1.17 \
 	--build-arg SAMTOOLS_VERSION=1.17 \
 	--label org.opencontainers.image.title="iRODS 4.2.12 clients, Ubuntu 18.04" \
