add bcftools (version 1.18)

--- a/docker/irods_clients/manifest.json
+++ b/docker/irods_clients/manifest.json
@@ -9,6 +9,7 @@
         "baton-metaquery",
         "baton-put",
         "baton-specificquery",
+        "bcftools",
         "htsfile",
         "iadmin",
         "ibun",
