--- a/docker/irods_clients/manifest.json
+++ b/docker/irods_clients/manifest.json
@@ -1,6 +1,7 @@
 {
     "package": "irods-clients",
     "executable": [
+        "ace2sam",
         "baton-chmod",
         "baton-do",
         "baton-get",
@@ -10,6 +11,13 @@
         "baton-put",
         "baton-specificquery",
         "bcftools",
+        "bgzip",
+        "blast2sam.pl",
+        "bowtie2sam.pl",
+        "color-chrs.pl",
+        "export2sam.pl",
+        "gff2gff.py",
+        "guess-ploidy.py",
         "htsfile",
         "iadmin",
         "ibun",
@@ -19,7 +27,6 @@
         "iclienthints",
         "icp",
         "ienv",
-        "ienv",
         "ierror",
         "iexecmd",
         "iexit",
@@ -28,8 +35,6 @@
         "igroupadmin",
         "ihelp",
         "iinit",
-        "iinit",
-        "ils",
         "ils",
         "ilsresc",
         "imcoll",
@@ -37,6 +42,7 @@
         "imiscsvrinfo",
         "imkdir",
         "imv",
+        "interpolate_sam.pl",
         "ipasswd",
         "iphybun",
         "iphymv",
@@ -67,6 +73,25 @@
         "iuserinfo",
         "ixmsg",
         "izonereport",
-        "samtools"
+        "maq2sam-long",
+        "maq2sam-short",
+        "md5fa",
+        "md5sum-lite",
+        "novo2sam.pl",
+        "plot-ampliconstats",
+        "plot-bamstats",
+        "plot-roh.py",
+        "psl2sam.pl",
+        "run-roh.pl",
+        "sam2vcf.pl",
+        "samtools",
+        "samtools.pl",
+        "seq_cache_populate.pl",
+        "soap2sam.pl",
+        "tabix",
+        "vcfutils.pl",
+        "wgsim",
+        "wgsim_eval.pl",
+        "zoom2sam.pl"
     ]
 }
