update manifest for samtools utils

--- a/docker/irods_clients/manifest.json
+++ b/docker/irods_clients/manifest.json
@@ -16,6 +16,7 @@
         "bowtie2sam.pl",
         "color-chrs.pl",
         "export2sam.pl",
+        "fasta-sanitize.pl",
         "gff2gff.py",
         "guess-ploidy.py",
         "htsfile",
