Remove production client wrappers
Having these on the PATH prevents setting up a well defined test
environment.

--- a/docker/irods_clients/manifest.json
+++ b/docker/irods_clients/manifest.json
@@ -1,7 +1,6 @@
 {
     "package": "irods-clients",
     "executable": [
-        "ace2sam",
         "baton-chmod",
         "baton-do",
         "baton-get",
@@ -11,15 +10,6 @@
         "baton-put",
         "baton-specificquery",
         "bcftools",
-        "bgzip",
-        "blast2sam.pl",
-        "bowtie2sam.pl",
-        "color-chrs.pl",
-        "export2sam.pl",
-        "fasta-sanitize.pl",
-        "gff2gff.py",
-        "guess-ploidy.py",
-        "htsfile",
         "iadmin",
         "ibun",
         "icd",
@@ -43,7 +33,6 @@
         "imiscsvrinfo",
         "imkdir",
         "imv",
-        "interpolate_sam.pl",
         "ipasswd",
         "iphybun",
         "iphymv",
@@ -74,26 +63,6 @@
         "iuserinfo",
         "ixmsg",
         "izonereport",
-        "maq2sam-long",
-        "maq2sam-short",
-        "md5fa",
-        "md5sum-lite",
-        "novo2sam.pl",
-        "plot-ampliconstats",
-        "plot-bamstats",
-        "plot-roh.py",
-        "plot-vcfstats",
-        "psl2sam.pl",
-        "run-roh.pl",
-        "sam2vcf.pl",
-        "samtools",
-        "samtools.pl",
-        "seq_cache_populate.pl",
-        "soap2sam.pl",
-        "tabix",
-        "vcfutils.pl",
-        "wgsim",
-        "wgsim_eval.pl",
-        "zoom2sam.pl"
+        "samtools"
     ]
 }
