Correct some --build-args

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -46,7 +46,6 @@ push: $(remote)
 
 ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
 	--label org.opencontainers.image.title="Base image, Ubuntu 16.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -58,7 +57,6 @@ ub-16.04-base.$(TAG): base/ubuntu/16.04/Dockerfile
 
 ub-18.04-base.$(TAG): base/ubuntu/18.04/Dockerfile
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
 	--label org.opencontainers.image.title="Base image, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -70,7 +68,6 @@ ub-18.04-base.$(TAG): base/ubuntu/18.04/Dockerfile
 
 ub-22.04-base.$(TAG): base/ubuntu/22.04/Dockerfile
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
 	--label org.opencontainers.image.title="Base image, Ubuntu 22.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -82,7 +79,7 @@ ub-22.04-base.$(TAG): base/ubuntu/22.04/Dockerfile
 
 ub-16.04-irods-4.2.7.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-16.04-base \
 	--label org.opencontainers.image.title="iRODS 4.2.7 server, Ubuntu 16.04" \
 	--label org.opencontainers.image.source=$(git_url) \
 	--label org.opencontainers.image.revision=$(git_commit) \
@@ -94,7 +91,7 @@ ub-16.04-irods-4.2.7.$(TAG): irods/ubuntu/16.04/Dockerfile ub-16.04-base.$(TAG)
 
 ub-18.04-irods-4.2.11.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-18.04-base \
 	--build-arg IRODS_VERSION=4.2.11 \
 	--label org.opencontainers.image.title="iRODS 4.2.11 server, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
@@ -107,7 +104,7 @@ ub-18.04-irods-4.2.11.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 
 ub-18.04-irods-4.2.12.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-18.04-base \
 	--build-arg IRODS_VERSION=4.2.12 \
 	--label org.opencontainers.image.title="iRODS 4.2.12 server, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
@@ -120,7 +117,7 @@ ub-18.04-irods-4.2.12.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 
 ub-18.04-irods-4.3.0.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-18.04-base \
 	--build-arg IRODS_VERSION=4.3.0 \
 	--label org.opencontainers.image.title="iRODS 4.3.0 server, Ubuntu 18.04" \
 	--label org.opencontainers.image.source=$(git_url) \
@@ -133,7 +130,7 @@ ub-18.04-irods-4.3.0.$(TAG): irods/ubuntu/18.04/Dockerfile ub-18.04-base.$(TAG)
 
 ub-22.04-irods-4.3-nightly.$(TAG): irods/ubuntu/22.04/Dockerfile ub-22.04-base.$(TAG)
 	docker build $(DOCKER_ARGS) \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
+	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-22.04-base \
 	--build-arg IRODS_VERSION=4.3-nightly \
 	--label org.opencontainers.image.title="iRODS 4.3-nightly server, Ubuntu 22.04" \
 	--label org.opencontainers.image.source=$(git_url) \
@@ -148,7 +145,6 @@ ub-16.04-irods-clients-4.2.7.$(TAG): irods_clients/ubuntu/16.04/Dockerfile ub-16
 	docker buildx build $(DOCKER_ARGS) \
 	--load \
 	--build-context singularity=../singularity \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
 	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-16.04-base \
 	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
 	--build-arg DOCKER_TAG=$(TAG) \
@@ -170,7 +166,6 @@ ub-18.04-irods-clients-4.2.11.$(TAG): irods_clients/ubuntu/Dockerfile ub-18.04-b
 	docker buildx build $(DOCKER_ARGS) \
 	--load \
 	--build-context singularity=../singularity \
-	--build-arg DOCKER_PREFIX=$(DOCKER_PREFIX) \
 	--build-arg BASE_IMAGE=$(DOCKER_PREFIX)/ub-18.04-base \
 	--build-arg DOCKER_IMAGE=$(subst .$(TAG),,$@) \
 	--build-arg DOCKER_TAG=$(TAG) \
