--- a/docker/irods/ubuntu/16.04/Dockerfile
+++ b/docker/irods/ubuntu/16.04/Dockerfile
@@ -1,5 +1,5 @@
-ARG DOCKER_TAG_PREFIX=wsinpg
-FROM $DOCKER_TAG_PREFIX/ub-16.04-base:latest
+ARG BASE_IMAGE=16.04-base
+FROM $BASE_IMAGE
 
 ARG IRODS_VERSION="4.2.7"
 
