Add the git PPA key to the repository
Add the key to the repository because the key servers are so
unreliable that they cause most builds to fail.

--- a/docker/irods_clients/ubuntu/16.04/Dockerfile
+++ b/docker/irods_clients/ubuntu/16.04/Dockerfile
@@ -40,7 +40,7 @@ RUN curl -sSL https://packages.irods.org/irods-signing-key.asc | apt-key add - &
     irods-runtime="${IRODS_VERSION}" \
     irods-icommands="${IRODS_VERSION}"
 
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys "E1DD270288B4E6030699E45FA1715D88E1DF1F24" && \
+RUN apt-key add - < /opt/docker/irods_clients/keys/git-core-ppa.asc && \
     echo "deb https://ppa.launchpadcontent.net/git-core/ppa/ubuntu $(lsb_release -sc) main" |\
     tee /etc/apt/sources.list.d/git-core.list && \
     apt-get update && \
