--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -46,6 +46,11 @@ jobs:
         run: |
             TAG=$(git describe --always --tags)
 
+            # Use the default builder because buildx cannot currently build on a base image
+            # that it has just built. See https://github.com/docker/buildx/issues/1453
+            # We still need buildx for its --build-context feature.
+            docker buildx use default
+
             cd docker
             make GITHUB_ACTIONS=${GITHUB_ACTIONS} GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }} ${{ env.SERVER_IMAGE }}.${TAG}
             make GITHUB_ACTIONS=${GITHUB_ACTIONS} GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }} ${{ env.CLIENT_IMAGE }}.${TAG}
